kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  annotations:
    glance/name: "Hubble"
    glance/show: "true"
    glance/icon: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/png/cilium.png"
    glance/id: "Network"

spec:
  hostnames: ["hubble.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
